...
                                                <rect key="frame" x="0.0" y="279" width="93" height="92"/>
                                                <color key="backgroundColor" red="0.47345235233479832" green="0.47345235233479832" blue="0.47345235233479832" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ClearButton"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="27"/>
                                                <state key="normal" title="C">
...
                                                <rect key="frame" x="0.0" y="0.0" width="93" height="73.5"/>
                                                <color key="backgroundColor" red="0.75769106220000004" green="0.51340776170000002" blue="0.201233367" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="division"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="27"/>
                                                <state key="normal" title="÷">
...
                                                <rect key="frame" x="0.0" y="74.5" width="93" height="73.5"/>
                                                <color key="backgroundColor" red="0.75769106220000004" green="0.51340776170000002" blue="0.201233367" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="multiplication"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="27"/>
                                                <state key="normal" title="x">
...
                                                <rect key="frame" x="0.0" y="149" width="93" height="73"/>
                                                <color key="backgroundColor" red="0.75769106220000004" green="0.51340776170000002" blue="0.201233367" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="subtraction"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="27"/>
                                                <state key="normal" title="-">
...
                                                <rect key="frame" x="0.0" y="223" width="93" height="73.5"/>
                                                <color key="backgroundColor" red="0.75769106220000004" green="0.51340776170000002" blue="0.201233367" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="addition"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="27"/>
                                                <state key="normal" title="+">
...
                                                <rect key="frame" x="0.0" y="297.5" width="93" height="73.5"/>
                                                <color key="backgroundColor" red="0.75769106220000004" green="0.51340776170000002" blue="0.201233367" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="equal"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="27"/>
                                                <state key="normal" title="=">
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="18" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l5o-ZA-QKh">
                                <rect key="frame" x="14" y="204" width="346" height="45"/>
                                <accessibility key="accessibilityConfiguration" identifier="Calculation-ResultLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="gnY-ZY-tc9"/>
...
